update version, add contributor

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "formbuilder-package",
-  "version": "1.4.3",
+  "version": "1.5",
   "description": "FormBuilder Craft CMS Plugins",
   "homepage": "https://github.com/roundhouse/FormBuilder-Craft-CMS",
   "authors": "Roundhouse Agency <hello@roundhouseagency.com> (https://github.com/roundhouse)",
   "contributors": {
-    "name": "Vadim Goncharov", "email": "vadim@roundhouseagency.com"
+    "name": "Vadim Goncharov", "email": "vadim@roundhouseagency.com",
+    "name": "Jake Cattrall", "email": "krazyjakee@gmail.com"
   },
   "repository": {
     "type": "git",
